# propr-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  package.json
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml
scripts/: install.sh  run.sh
src/: main.rs
src/commands/: config.rs  create.rs  generate.rs  init.rs  mod.rs
src/utils/: config.rs  github.rs  loader.rs  mod.rs  openai.rs  prompt.rs
