[package]
name = "propr"
description = "Generate PR descriptions from the command line"
version = "0.7.0"
authors = ["Niels Segers <segers.n@hotmail.com>"]
edition = "2021"
license = "MIT"
keyword = ["openai", "chatgpt", "gpt", "github", "pull", "request", "pr", "generate", "description"]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/propr-cli/"
repository = "https://github.com/segersniels/propr-cli/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.5"
confy = "0.5.1"
dialoguer = "0.10.4"
dirs = "5.0.1"
human-panic = "1.1.4"
octocrab = "0.21.0"
reqwest = "0.11.17"
serde = "1.0.160"
serde_json = "1.0.96"
spinners = "4.1.0"
tokio = { version = "1.28.0", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
opt-level = "z"
lto = true
